@@ -21,9 +21,11 @@ import org.junit.Before;
 import org.junit.Test;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.ImmutableCapabilities;
+import org.openqa.selenium.SessionNotCreatedException;
 import org.openqa.selenium.events.EventBus;
 import org.openqa.selenium.events.local.GuavaEventBus;
 import org.openqa.selenium.grid.data.CreateSessionRequest;
+import org.openqa.selenium.grid.data.CreateSessionResponse;
 import org.openqa.selenium.grid.data.Session;
 import org.openqa.selenium.grid.data.Slot;
 import org.openqa.selenium.grid.distributor.Distributor;
@@ -35,7 +37,11 @@ import org.openqa.selenium.grid.node.local.LocalNode;
 import org.openqa.selenium.grid.security.Secret;
 import org.openqa.selenium.grid.sessionmap.SessionMap;
 import org.openqa.selenium.grid.sessionmap.local.LocalSessionMap;
+import org.openqa.selenium.grid.sessionqueue.NewSessionQueuer;
+import org.openqa.selenium.grid.sessionqueue.local.LocalNewSessionQueue;
+import org.openqa.selenium.grid.sessionqueue.local.LocalNewSessionQueuer;
 import org.openqa.selenium.grid.testing.TestSessionFactory;
+import org.openqa.selenium.internal.Either;
 import org.openqa.selenium.json.Json;
 import org.openqa.selenium.remote.NewSessionPayload;
 import org.openqa.selenium.remote.http.Contents;
@@ -45,23 +51,33 @@ import org.openqa.selenium.remote.http.HttpRequest;
 import org.openqa.selenium.remote.http.HttpResponse;
 import org.openqa.selenium.remote.tracing.DefaultTestTracer;
 import org.openqa.selenium.remote.tracing.Tracer;
+import org.openqa.selenium.support.ui.FluentWait;
+import org.openqa.selenium.support.ui.Wait;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.time.Instant;
-import java.util.List;
+import java.time.Duration;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 
+import static java.util.Collections.singletonList;
+import static java.util.Collections.singletonMap;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.fail;
+import static org.assertj.core.api.InstanceOfAssertFactories.LIST;
+import static org.assertj.core.api.InstanceOfAssertFactories.MAP;
 import static org.openqa.selenium.json.Json.MAP_TYPE;
 import static org.openqa.selenium.remote.http.Contents.utf8String;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
 import static org.openqa.selenium.remote.http.HttpMethod.POST;
+
+import com.google.common.collect.ImmutableMap;
 
 public class GraphqlHandlerTest {
 
@@ -73,6 +89,7 @@ public class GraphqlHandlerTest {
   private ImmutableCapabilities caps;
   private ImmutableCapabilities stereotype;
   private NewSessionPayload payload;
+  private final Wait<Object> wait = new FluentWait<>(new Object()).withTimeout(Duration.ofSeconds(5));
 
   public GraphqlHandlerTest() throws URISyntaxException {
   }
@@ -84,30 +101,50 @@ public class GraphqlHandlerTest {
     HttpClient.Factory clientFactory = HttpClient.Factory.createDefault();
 
     SessionMap sessions = new LocalSessionMap(tracer, events);
-    distributor = new LocalDistributor(tracer, events, clientFactory, sessions, registrationSecret);
     stereotype = new ImmutableCapabilities("browserName", "cheese");
     caps = new ImmutableCapabilities("browserName", "cheese");
     payload = NewSessionPayload.create(caps);
+
+    LocalNewSessionQueue localNewSessionQueue = new LocalNewSessionQueue(
+      tracer,
+      events,
+      Duration.ofSeconds(2),
+      Duration.ofSeconds(2));
+    NewSessionQueuer queuer = new LocalNewSessionQueuer(tracer, events, localNewSessionQueue);
+
+    distributor = new LocalDistributor(
+      tracer,
+      events,
+      clientFactory,
+      sessions,
+      queuer,
+      registrationSecret);
   }
 
   @Test
   public void shouldBeAbleToGetGridUri() {
-    GraphqlHandler handler = new GraphqlHandler(distributor, publicUri);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, publicUri);
 
     Map<String, Object> topLevel = executeQuery(handler, "{ grid { uri } }");
 
-    assertThat(topLevel).isEqualTo(Map.of("data", Map.of("grid", Map.of("uri", publicUri.toString()))));
+    assertThat(topLevel).isEqualTo(
+      singletonMap(
+        "data", singletonMap(
+          "grid", singletonMap(
+            "uri", publicUri.toString()))));
   }
 
   @Test
   public void shouldReturnAnEmptyListForNodesIfNoneAreRegistered() {
-    GraphqlHandler handler = new GraphqlHandler(distributor, publicUri);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, publicUri);
 
     Map<String, Object> topLevel = executeQuery(handler, "{ grid { nodes { uri } } }");
 
-    assertThat(topLevel)
-      .describedAs(topLevel.toString())
-      .isEqualTo(Map.of("data", Map.of("grid", Map.of("nodes", List.of()))));
+    assertThat(topLevel).describedAs(topLevel.toString()).isEqualTo(
+      singletonMap(
+        "data", singletonMap(
+          "grid", singletonMap(
+            "nodes", Collections.emptyList()))));
   }
 
   @Test
@@ -128,13 +165,16 @@ public class GraphqlHandlerTest {
       })
       .build();
     distributor.add(node);
+    wait.until(obj -> distributor.getStatus().hasCapacity());
 
-    GraphqlHandler handler = new GraphqlHandler(distributor, publicUri);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, publicUri);
     Map<String, Object> topLevel = executeQuery(handler, "{ grid { nodes { uri } } }");
 
-    assertThat(topLevel)
-      .describedAs(topLevel.toString())
-      .isEqualTo(Map.of("data", Map.of("grid", Map.of("nodes", List.of(Map.of("uri", nodeUri))))));
+    assertThat(topLevel).describedAs(topLevel.toString()).isEqualTo(
+      singletonMap(
+        "data", singletonMap(
+          "grid", singletonMap(
+            "nodes", singletonList(singletonMap("uri", nodeUri))))));
   }
 
   @Test
@@ -143,44 +183,54 @@ public class GraphqlHandlerTest {
     URI nodeUri = new URI(nodeUrl);
 
     Node node = LocalNode.builder(tracer, events, nodeUri, publicUri, registrationSecret)
-        .add(caps, new TestSessionFactory((id, caps) -> new org.openqa.selenium.grid.data.Session(
-            id,
-            nodeUri,
-            stereotype,
-            caps,
-            Instant.now()))).build();
+      .add(caps, new TestSessionFactory((id, caps) -> new org.openqa.selenium.grid.data.Session(
+        id,
+        nodeUri,
+        stereotype,
+        caps,
+        Instant.now()))).build();
 
     distributor.add(node);
-    Session session = distributor.newSession(createRequest(payload)).getSession();
+    wait.until(obj -> distributor.getStatus().hasCapacity());
 
-    assertThat(session).isNotNull();
-    String sessionId = session.getId().toString();
+    Either<SessionNotCreatedException, CreateSessionResponse> response =
+      distributor.newSession(createRequest(payload));
+    if (response.isRight()) {
+      Session session = response.right().getSession();
 
-    Set<Slot> slots = distributor.getStatus().getNodes().stream().findFirst().get().getSlots();
+      assertThat(session).isNotNull();
+      String sessionId = session.getId().toString();
 
-    Slot slot = slots.stream().findFirst().get();
+      Set<Slot> slots = distributor.getStatus().getNodes().stream().findFirst().get().getSlots();
 
-    org.openqa.selenium.grid.graphql.Session graphqlSession =
-        new org.openqa.selenium.grid.graphql.Session(sessionId,
-                                                     session.getCapabilities(),
-                                                     session.getStartTime(),
-                                                     session.getUri(),
-                                                     node.getId().toString(),
-                                                     node.getUri(),
-                                                     slot);
-    String query = "{ session (id: \"" + sessionId + "\") { id, capabilities, startTime, uri } }";
+      Slot slot = slots.stream().findFirst().get();
 
-    GraphqlHandler handler = new GraphqlHandler(distributor, publicUri);
-    Map<String, Object> result = executeQuery(handler, query);
+      org.openqa.selenium.grid.graphql.Session graphqlSession =
+        new org.openqa.selenium.grid.graphql.Session(
+          sessionId,
+          session.getCapabilities(),
+          session.getStartTime(),
+          session.getUri(),
+          node.getId().toString(),
+          node.getUri(),
+          slot);
+      String query = String.format(
+        "{ session (id: \"%s\") { id, capabilities, startTime, uri } }", sessionId);
 
-    assertThat(result)
-        .describedAs(result.toString())
-        .isEqualTo(Map.of(
-            "data", Map.of("session",
-                           Map.of("id", sessionId,
-                                  "capabilities", graphqlSession.getCapabilities(),
-                                  "startTime", graphqlSession.getStartTime(),
-                                  "uri", graphqlSession.getUri().toString()))));
+      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, publicUri);
+      Map<String, Object> result = executeQuery(handler, query);
+
+      assertThat(result).describedAs(result.toString()).isEqualTo(
+        singletonMap(
+          "data", singletonMap(
+            "session", ImmutableMap.of(
+              "id", sessionId,
+              "capabilities", graphqlSession.getCapabilities(),
+              "startTime", graphqlSession.getStartTime(),
+              "uri", graphqlSession.getUri().toString()))));
+    } else {
+      fail("Session creation failed", response.left());
+    }
   }
 
   @Test
@@ -189,43 +239,52 @@ public class GraphqlHandlerTest {
     URI nodeUri = new URI(nodeUrl);
 
     Node node = LocalNode.builder(tracer, events, nodeUri, publicUri, registrationSecret)
-        .add(caps, new TestSessionFactory((id, caps) -> new org.openqa.selenium.grid.data.Session(
-            id,
-            nodeUri,
-            stereotype,
-            caps,
-            Instant.now()))).build();
+      .add(caps, new TestSessionFactory((id, caps) -> new org.openqa.selenium.grid.data.Session(
+        id,
+        nodeUri,
+        stereotype,
+        caps,
+        Instant.now()))).build();
 
     distributor.add(node);
-    Session session = distributor.newSession(createRequest(payload)).getSession();
+    wait.until(obj -> distributor.getStatus().hasCapacity());
 
-    assertThat(session).isNotNull();
-    String sessionId = session.getId().toString();
+    Either<SessionNotCreatedException, CreateSessionResponse> response =
+      distributor.newSession(createRequest(payload));
 
-    Set<Slot> slots = distributor.getStatus().getNodes().stream().findFirst().get().getSlots();
+    if (response.isRight()) {
+      Session session = response.right().getSession();
 
-    Slot slot = slots.stream().findFirst().get();
+      assertThat(session).isNotNull();
+      String sessionId = session.getId().toString();
 
-    org.openqa.selenium.grid.graphql.Session graphqlSession =
-        new org.openqa.selenium.grid.graphql.Session(sessionId,
-                                                     session.getCapabilities(),
-                                                     session.getStartTime(),
-                                                     session.getUri(),
-                                                     node.getId().toString(),
-                                                     node.getUri(),
-                                                     slot);
-    String query = "{ session (id: \"" + sessionId + "\") { nodeId, nodeUri } }";
+      Set<Slot> slots = distributor.getStatus().getNodes().stream().findFirst().get().getSlots();
 
-    GraphqlHandler handler = new GraphqlHandler(distributor, publicUri);
-    Map<String, Object> result = executeQuery(handler, query);
+      Slot slot = slots.stream().findFirst().get();
 
-    assertThat(result)
-        .describedAs(result.toString())
-        .isEqualTo(Map.of(
-            "data", Map.of("session",
-                           Map.of("nodeId", graphqlSession.getNodeId(),
-                                  "nodeUri",
-                                  graphqlSession.getNodeUri().toString()))));
+      org.openqa.selenium.grid.graphql.Session graphqlSession =
+        new org.openqa.selenium.grid.graphql.Session(
+          sessionId,
+          session.getCapabilities(),
+          session.getStartTime(),
+          session.getUri(),
+          node.getId().toString(),
+          node.getUri(),
+          slot);
+      String query = String.format("{ session (id: \"%s\") { nodeId, nodeUri } }", sessionId);
+
+      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, publicUri);
+      Map<String, Object> result = executeQuery(handler, query);
+
+      assertThat(result).describedAs(result.toString()).isEqualTo(
+        singletonMap(
+          "data", singletonMap(
+            "session", ImmutableMap.of(
+              "nodeId", graphqlSession.getNodeId(),
+              "nodeUri", graphqlSession.getNodeUri().toString()))));
+    } else {
+      fail("Session creation failed", response.left());
+    }
   }
 
   @Test
@@ -234,49 +293,58 @@ public class GraphqlHandlerTest {
     URI nodeUri = new URI(nodeUrl);
 
     Node node = LocalNode.builder(tracer, events, nodeUri, publicUri, registrationSecret)
-        .add(caps, new TestSessionFactory((id, caps) -> new org.openqa.selenium.grid.data.Session(
-            id,
-            nodeUri,
-            stereotype,
-            caps,
-            Instant.now()))).build();
+      .add(caps, new TestSessionFactory((id, caps) -> new org.openqa.selenium.grid.data.Session(
+        id,
+        nodeUri,
+        stereotype,
+        caps,
+        Instant.now()))).build();
 
     distributor.add(node);
-    Session session = distributor.newSession(createRequest(payload)).getSession();
+    wait.until(obj -> distributor.getStatus().hasCapacity());
 
-    assertThat(session).isNotNull();
-    String sessionId = session.getId().toString();
+    Either<SessionNotCreatedException, CreateSessionResponse> response =
+      distributor.newSession(createRequest(payload));
 
-    Set<Slot> slots = distributor.getStatus().getNodes().stream().findFirst().get().getSlots();
+    if (response.isRight()) {
+      Session session = response.right().getSession();
 
-    Slot slot = slots.stream().findFirst().get();
+      assertThat(session).isNotNull();
+      String sessionId = session.getId().toString();
 
-    org.openqa.selenium.grid.graphql.Session graphqlSession =
-        new org.openqa.selenium.grid.graphql.Session(sessionId,
-                                                     session.getCapabilities(),
-                                                     session.getStartTime(),
-                                                     session.getUri(),
-                                                     node.getId().toString(),
-                                                     node.getUri(),
-                                                     slot);
+      Set<Slot> slots = distributor.getStatus().getNodes().stream().findFirst().get().getSlots();
 
-    org.openqa.selenium.grid.graphql.Slot graphqlSlot = graphqlSession.getSlot();
+      Slot slot = slots.stream().findFirst().get();
 
-    String query =
-        "{ session (id: \"" + sessionId + "\") { slot { id, stereotype, lastStarted } } }";
+      org.openqa.selenium.grid.graphql.Session graphqlSession =
+        new org.openqa.selenium.grid.graphql.Session(
+          sessionId,
+          session.getCapabilities(),
+          session.getStartTime(),
+          session.getUri(),
+          node.getId().toString(),
+          node.getUri(),
+          slot);
 
-    GraphqlHandler handler = new GraphqlHandler(distributor, publicUri);
-    Map<String, Object> result = executeQuery(handler, query);
+      org.openqa.selenium.grid.graphql.Slot graphqlSlot = graphqlSession.getSlot();
 
-    assertThat(result)
-        .describedAs(result.toString())
-        .isEqualTo(Map.of(
-            "data", Map.of("session",
-                           Map.of("slot",
-                                  Map.of("id", graphqlSlot.getId(),
-                                         "stereotype", graphqlSlot.getStereotype(),
-                                         "lastStarted",
-                                         graphqlSlot.getLastStarted())))));
+      String query = String.format(
+        "{ session (id: \"%s\") { slot { id, stereotype, lastStarted } } }", sessionId);
+
+      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, publicUri);
+      Map<String, Object> result = executeQuery(handler, query);
+
+      assertThat(result).describedAs(result.toString()).isEqualTo(
+        singletonMap(
+          "data", singletonMap(
+            "session", singletonMap(
+              "slot", ImmutableMap.of(
+                "id", graphqlSlot.getId(),
+                "stereotype", graphqlSlot.getStereotype(),
+                "lastStarted", graphqlSlot.getLastStarted())))));
+    } else {
+      fail("Session creation failed", response.left());
+    }
   }
 
   @Test
@@ -285,28 +353,37 @@ public class GraphqlHandlerTest {
     URI nodeUri = new URI(nodeUrl);
 
     Node node = LocalNode.builder(tracer, events, nodeUri, publicUri, registrationSecret)
-        .add(caps, new TestSessionFactory((id, caps) -> new org.openqa.selenium.grid.data.Session(
-            id,
-            nodeUri,
-            stereotype,
-            caps,
-            Instant.now()))).build();
+      .add(caps, new TestSessionFactory((id, caps) -> new org.openqa.selenium.grid.data.Session(
+        id,
+        nodeUri,
+        stereotype,
+        caps,
+        Instant.now()))).build();
 
     distributor.add(node);
-    Session session = distributor.newSession(createRequest(payload)).getSession();
+    wait.until(obj -> distributor.getStatus().hasCapacity());
 
-    assertThat(session).isNotNull();
-    String sessionId = session.getId().toString();
+    Either<SessionNotCreatedException, CreateSessionResponse> response =
+      distributor.newSession(createRequest(payload));
 
-    String query = "{ session (id: \"" + sessionId + "\") { sessionDurationMillis } }";
+    if (response.isRight()) {
+      Session session = response.right().getSession();
 
-    GraphqlHandler handler = new GraphqlHandler(distributor, publicUri);
-    Map<String, Object> result = executeQuery(handler, query);
+      assertThat(session).isNotNull();
+      String sessionId = session.getId().toString();
 
-    Map<String, Object> dataMap = (Map<String, Object>) result.get("data");
-    Map<String, Object> sessionMap = (Map<String, Object>) dataMap.get("session");
+      String query = String.format("{ session (id: \"%s\") { sessionDurationMillis } }", sessionId);
 
-    assertThat(sessionMap.containsKey("sessionDurationMillis")).isTrue();
+      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, publicUri);
+      Map<String, Object> result = executeQuery(handler, query);
+
+      assertThat(result)
+        .containsOnlyKeys("data")
+        .extracting("data").asInstanceOf(MAP).containsOnlyKeys("session")
+        .extracting("session").asInstanceOf(MAP).containsOnlyKeys("sessionDurationMillis");
+    } else {
+      fail("Session creation failed", response.left());
+    }
   }
 
   @Test
@@ -315,33 +392,28 @@ public class GraphqlHandlerTest {
     URI nodeUri = new URI(nodeUrl);
 
     Node node = LocalNode.builder(tracer, events, nodeUri, publicUri, registrationSecret)
-        .add(caps, new TestSessionFactory((id, caps) -> new org.openqa.selenium.grid.data.Session(
-            id,
-            nodeUri,
-            stereotype,
-            caps,
-            Instant.now()))).build();
+      .add(caps, new TestSessionFactory((id, caps) -> new org.openqa.selenium.grid.data.Session(
+        id,
+        nodeUri,
+        stereotype,
+        caps,
+        Instant.now()))).build();
 
     distributor.add(node);
+    wait.until(obj -> distributor.getStatus().hasCapacity());
 
     String randomSessionId = UUID.randomUUID().toString();
     String query = "{ session (id: \"" + randomSessionId + "\") { sessionDurationMillis } }";
 
-    GraphqlHandler handler = new GraphqlHandler(distributor, publicUri);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, publicUri);
     Map<String, Object> result = executeQuery(handler, query);
-    assertThat(result.get("data")).isNull();
-
-    List<Map<String, Object>> errors = (List<Map<String, Object>>) result.get("errors");
-
-    assertThat(errors).isNotNull();
-    assertThat(errors).element(0).isNotNull();
-
-    Map<String, Object> error = errors.get(0);
-
-    Map<String, Object> extensions = (Map<String, Object>) error.get("extensions");
-
-    String sessionId = (String) extensions.get("sessionId");
-    assertThat(sessionId).isEqualTo(randomSessionId);
+    assertThat(result)
+      .containsEntry("data", null)
+      .containsKey("errors")
+      .extracting("errors").asInstanceOf(LIST).isNotEmpty()
+      .element(0).asInstanceOf(MAP).containsKey("extensions")
+      .extracting("extensions").asInstanceOf(MAP).containsKey("sessionId")
+      .extracting("sessionId").isEqualTo(randomSessionId);
   }
 
   @Test
@@ -350,31 +422,30 @@ public class GraphqlHandlerTest {
     URI nodeUri = new URI(nodeUrl);
 
     Node node = LocalNode.builder(tracer, events, nodeUri, publicUri, registrationSecret)
-        .add(caps, new TestSessionFactory((id, caps) -> new org.openqa.selenium.grid.data.Session(
-            id,
-            nodeUri,
-            stereotype,
-            caps,
-            Instant.now()))).build();
+      .add(caps, new TestSessionFactory((id, caps) -> new org.openqa.selenium.grid.data.Session(
+        id,
+        nodeUri,
+        stereotype,
+        caps,
+        Instant.now()))).build();
 
     distributor.add(node);
+    wait.until(obj -> distributor.getStatus().hasCapacity());
 
     String query = "{ session (id: \"\") { sessionDurationMillis } }";
 
-    GraphqlHandler handler = new GraphqlHandler(distributor, publicUri);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, publicUri);
     Map<String, Object> result = executeQuery(handler, query);
-    assertThat(result.get("data")).isNull();
-
-    List<Map<String, Object>> errors = (List<Map<String, Object>>) result.get("errors");
-
-    assertThat(errors).isNotNull();
-    assertThat(errors).element(0).isNotNull();
+    assertThat(result)
+      .containsEntry("data", null)
+      .containsKey("errors")
+      .extracting("errors").asInstanceOf(LIST).isNotEmpty();
   }
 
   private Map<String, Object> executeQuery(HttpHandler handler, String query) {
     HttpResponse res = handler.execute(
       new HttpRequest(GET, "/graphql")
-        .setContent(Contents.asJson(Map.of("query", query))));
+        .setContent(Contents.asJson(singletonMap("query", query))));
 
     return new Json().toType(Contents.string(res), MAP_TYPE);
   }
